[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rallytools"
version = "0.1.0"
description = "Rally Soldier’s personal Python utility toolkit."
authors = [{name = "Rally Soldier"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["utilities", "helpers", "rallytools"]
dependencies = []

[project.urls]
Homepage = "https://example.com"
Repository = "https://example.com"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B", "SIM", "C90"]
ignore = ["E203"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.9",
  "black>=24.8.0",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "pre-commit>=3.8.0",
  "mypy>=1.10.0",
  "types-python-dateutil; python_version<'3.13'",
]
